fix image stretching in preview

--- a/src/components/page/style.css
+++ b/src/components/page/style.css
@@ -64,6 +64,7 @@
 
 .card-image {
   height: 200px;
+  width: max-content;
 }
 
 /* <---------- HOME PAGE ----------> */
